<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name_main">湧記燒鵝銷售管理系統</string>
    <string name="app_name_order">點餐作業</string>
    <string name="app_name_datalist">訂單查詢</string>
    <string name="app_name_settings">設定</string>
    <string name="order_section_title0">門市現金</string>
    <string name="order_section_title1">預約自取</string>
    <string name="order_section_title2">外送</string>
    <string name="order_section_title3">待結訂單</string>
    <string name="menu_settings">關於湧記燒鵝</string>
    <string name="order_button_title">點餐作業</string>
    <string name="app_name_statistics">銷售數據</string>
    <string name="accounts_button_title">日結作業</string>
    <string name="humanaffairs_button_title">人事作業</string>
    <string name="lunchbox_title_0">招牌肥鵝飯\n$90</string>
    <string name="lunchbox_title_1">燒鵝四寶飯\n$85</string>
    <string name="lunchbox_title_2">燒鵝叉燒飯\n$80</string>
    <string name="lunchbox_title_3">燒鵝油雞飯\n$80</string>
    <string name="lunchbox_title_4">燒鵝香腸飯\n$80</string>
    <string name="lunchbox_title_5">油雞腿飯\n$75</string>
    <string name="lunchbox_title_6">燒鵝三寶飯\n$70</string>
    <string name="lunchbox_title_7">叉燒油雞飯\n$65</string>
    <string name="lunchbox_title_8">叉燒香腸飯\n$65</string>
    <string name="lunchbox_title_9">香腸油雞飯\n$65</string>
    <string name="lunchbox_title_10">蜜汁叉燒飯\n$60</string>
    <string name="lunchbox_title_11">特級香腸飯\n$60</string>
    <string name="lunchbox_title_12">促銷燒鵝飯\n買一送一\n$60</string>
    <string name="barbecued_title_0">燒鵝 全 隻\n$1,150</string>
    <string name="barbecued_title_1">燒鵝 半 隻\n$600</string>
    <string name="barbecued_title_2">燒鵝 1/4 隻\n$350</string>
    <string name="barbecued_title_3">燒鵝 1 份\n$200</string>
    <string name="barbecued_title_4">燒鵝\n(自訂)</string>
    <string name="barbecued_title_5">鵝頭\n$50</string>
    <string name="barbecued_title_6">蜜汁叉燒肉 1 斤\n$350</string>
    <string name="barbecued_title_7">蜜汁叉燒肉 半 斤\n$200</string>
    <string name="barbecued_title_8">蜜汁叉燒肉 1 份\n$120</string>
    <string name="barbecued_title_9">蜜汁叉燒肉\n(自訂)</string>
    <string name="barbecued_title_10">油雞腿 1 隻\n$50</string>
    <string name="barbecued_title_11">特級香腸\n1 條\n$100</string>
    <string name="barbecued_title_12">特級香腸\n半 條\n$50</string>
    <string name="barbecued_title_13">特級香腸\n(自訂)</string>
    <string name="barbecued_title_14">燒鵝拼盤\n大 份\n$600</string>
    <string name="barbecued_title_15">燒鵝拼盤\n小 份\n$350</string>
    <string name="other_title_0">上湯紅蟳粥\n大\n$900</string>
    <string name="other_title_1">上湯紅蟳粥\n中\n$600</string>
    <string name="other_title_2">上湯紅蟳粥\n小\n$350</string>
    <string name="other_title_3">紅酒滷花生\n1 包\n$100</string>
    <string name="other_title_4">紅酒滷花生\n(自訂)</string>
    <string name="other_title_5">白飯\n(自訂)</string>
    <string name="other_title_6">辦桌\n(自訂)</string>
    <string name="bill_title_1">餐點</string>
    <string name="bill_title_2">單價</string>
    <string name="bill_title_3">數量</string>
    <string name="bill_title_4">小計</string>
    <string name="bill_title_5">移除</string>
    <string name="bill_title_6">總金額：</string>
    <string name="bill_title_7">元</string>
    <string name="button_title_1">結 帳</string>
    <string name="button_title_2">取 消</string>
    <string name="button_title_3">刪 除</string>
    <string name="number_input_title_1">購買數量</string>
    <string name="number_input_title_2">份</string>
    <string name="price_input_title_1">購買金額</string>
    <string name="price_input_title_2">元</string>
    <string name="setting">設定</string>
    <string name="product_setting">產品設定</string>
    <string name="title_activity_product">ProductActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="product_name">產品名稱：</string>
    <string name="product_category">產品類別：</string>
    <string name="product_price">產品價格：</string>
    <string name="new_product">依現在類別新增品項</string>
    <string name="product_id">產品編號：</string>
    <string name="product_setting_title">產品設定</string>
    <string name="save">儲存</string>
    <string name="delete">刪除</string>
    <string name="customized_price">自訂價格商品</string>
    <string name="managing_product">新增修改品項</string>
	<string name="customizing">自訂</string>
</resources>