<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderSectionFragment" >

	<RadioGroup
	    android:id="@+id/myRadioGroup"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="180dp"
	    android:layout_marginTop="25dp"
	    android:orientation="horizontal" >

    </RadioGroup>  
    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/order_section_title0"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
        android:textColorLink="@color/red"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="800dp"
        android:layout_height="495dp"
        android:layout_gravity="top"
        android:layout_marginTop="200dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="800dp"
                android:layout_height="50dp"
                android:gravity="top"
                android:longClickable="false" >

            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" 
                android:background="@drawable/back_border">
				<LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

	<FrameLayout
	    android:layout_width="480dp"
	    android:layout_height="510dp"
	    android:layout_marginLeft="799dp"
	    android:layout_marginTop="0dp"
	    android:background="#FFFFFF" >

		<TableLayout
		    android:layout_width="match_parent"
		    android:layout_height="match_parent" 
		    android:background="@drawable/back_border">

		    <TableRow
		        android:id="@+id/tableRow1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" 
		        android:padding="10dp">

		        <TextView
		            android:id="@+id/textView1"
		            android:layout_width="wrap_content"
		            android:layout_height="60dp"
		            android:text="@string/product_setting"
		            android:textSize="30sp"
		            android:textAppearance="?android:attr/textAppearanceLarge" />

		        <EditText
		            android:id="@+id/editText1"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:ems="10" >

		            <requestFocus />
		        </EditText>

		    </TableRow>

		    <TableRow
		        android:id="@+id/tableRow2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" 
		        android:padding="10dp">

		        <TextView
		            android:id="@+id/textView2"
		            android:layout_width="wrap_content"
		            android:layout_height="60dp"
		            android:text="@string/product_setting"
		            android:textSize="30sp"
		            android:textAppearance="?android:attr/textAppearanceLarge" />

		        <EditText
		            android:id="@+id/editText2"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:ems="10" >
		            <requestFocus />
		        </EditText>
		    </TableRow>

		    <TableRow
		        android:id="@+id/tableRow3"
		        android:layout_width="wrap_content"
		        android:layout_height="100dp" >
		    </TableRow>

		    <TableRow
		        android:id="@+id/tableRow4"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" >
		    </TableRow>
		</TableLayout>

    </FrameLayout>

	<TextView
	    android:id="@+id/TextView05"
	    android:layout_width="wrap_content"
	    android:layout_height="50dp"
	    android:layout_marginLeft="805dp"
	    android:layout_marginTop="560dp"
	    android:gravity="center_vertical"
	    android:text="@string/bill_title_6"
	    android:textAppearance="?android:attr/textAppearanceLarge"
	    android:textSize="30sp" />

	<TextView
	    android:id="@+id/TextViewTotal"
	    android:layout_width="300dp"
	    android:layout_height="50dp"
	    android:layout_marginLeft="915dp"
	    android:layout_marginTop="560dp"
	    android:gravity="center_vertical|right"
	    android:textAppearance="?android:attr/textAppearanceLarge"
	    android:textSize="30sp" />

	<TextView
	    android:id="@+id/TextView06"
	    android:layout_width="wrap_content"
	    android:layout_height="50dp"
	    android:layout_marginLeft="1230dp"
	    android:layout_marginTop="560dp"
	    android:gravity="center_vertical"
	    android:text="@string/bill_title_7"
	    android:textAppearance="?android:attr/textAppearanceLarge"
	    android:textSize="30sp" />

	<Button
	    android:id="@+id/PayButton"
	    android:layout_width="220dp"
	    android:layout_height="60dp"
	    android:layout_marginLeft="1050dp"
	    android:layout_marginTop="620dp"
	    android:background="@drawable/pay_button"
	    android:text="@string/button_title_1"
	    android:textColor="@color/white"
	    android:textSize="30sp"
	    android:textStyle="italic" />

	<Button
	    android:id="@+id/CancelButton"
	    android:layout_width="220dp"
	    android:layout_height="60dp"
	    android:layout_marginLeft="810dp"
	    android:layout_marginTop="620dp"
	    android:background="@drawable/cancel_button"
	    android:text="@string/button_title_2"
	    android:textColor="@color/white"
	    android:textSize="30sp" />

	<View
	    android:id="@+id/View01"
	    android:layout_width="1dp"
	    android:layout_height="50dp"
	    android:layout_marginLeft="266dp"
	    android:layout_marginTop="200dp"
	    android:background="@color/white" />

	<View
	    android:id="@+id/View02"
	    android:layout_width="1dp"
	    android:layout_height="50dp"
	    android:layout_marginLeft="533dp"
	    android:layout_marginTop="200dp"
	    android:background="@color/white" />

</FrameLayout>
